# ChromBERT

./: .readthedocs.yaml  Dockerfile  README.md  env.yaml  pyproject.toml
chrombert/: __init__.py  dataset.py  model.py  model_config.py
chrombert/base/: __init__.py  model.py  model_config.py
chrombert/base/utils/: __init__.py  embedding.py  sublayer.py  transformer.py
chrombert/finetune/: __init__.py
chrombert/finetune/dataset/: __init__.py  basic_dataset.py  data_module.py  dataset_config.py  general_dataset.py  multi_flankwindow_dataset.py
chrombert/finetune/dataset/presets/: general.json  general_mm10.json  multi_flank_window.json  multi_flank_window_mm10.json  prompt_cctp_sequence.json  prompt_cistrome.json  prompt_dna.json  prompt_dnase.json  prompt_exp.json  prompt_exp_pbmc.json  prompt_expression.json  prompt_sequence.json
chrombert/finetune/dataset/prompt_dataset/: __init__.py  interface.py  interface_manager.py  prompt_dataset.py  prompt_dataset_single.py  prompt_dataset_two.py
chrombert/finetune/model/: __init__.py  basic_model.py  general_ft_model.py  gep_ft_model.py  model_config.py  multi_flankwindow_ft_model.py  prompt_dna_model.py  prompt_ft_model.py
chrombert/finetune/model/presets/: general.json  general_mm10.json  gep.json  gep_mm10.json  prompt_cctp_sequence.json  prompt_cistrome.json  prompt_dna.json  prompt_dnase.json  prompt_dnase_mm10.json  prompt_exp.json  prompt_sequence.json
chrombert/finetune/model/utils/: __init__.py  dnabert2.py  emb_manager.py  general_header.py  gep_header.py  layer_norm.py  pool_flank_window.py  prompt_header.py  residual_block.py
chrombert/finetune/train/: __init__.py  basic_pl_module.py  pl_module.py  train_config.py
chrombert/finetune/train/utils/: logger.py  loss.py
chrombert/scripts/: chrombert_generation.py  chrombert_generation_sc.py  chrombert_get_cistrome_emb.py  chrombert_get_region_emb.py  chrombert_get_regulator_emb.py  chrombert_imputation.py  chrombert_imputation_sc.py  chrombert_make_dataset.py  chrombert_predict_cistrome.py  chrombert_prepare_env.py  demo.py
chrombert/scripts/utils/: __init__.py  h5_manager.py
chrombert/utils/: __init__.py  decoder.py  dna_bert2.py  embedding.py  loss.py  transformer.py
data/config_file/: README.md
data/demo/embedding/: specific_rnf2_loc_region.csv
data/demo/ezh2/: hESC_GSM1003524_EZH2.bed  hESC_GSM1498900_H3K27me3.bed
data/demo/general_classification/: .train.csv  test.csv  train.csv  valid.csv
data/demo/gep/: test.csv  train.csv  valid.csv
data/demo/prompt_generation/: pbmc10k.h5
data/pretrain_checkpoint/base/: README.md
docs/: requirements.txt
docs/source/: cli.rst  conf.py  developing.md  finetune.rst  index.rst  installation.rst  quick_tour.rst  scripts.rst  tutorial_embedding_extraction.nblink  tutorial_finetuning_ChromBERT.nblink  tutorial_finetuning_ChromBERT_from_scratch.nblink  tutorial_locus_specific_TRN_eqtl.nblink  tutorial_locus_specific_TRN_ezh2.nblink  tutorial_locus_specific_TRN_starr.nblink  tutorial_prompt_cistrome_imputation.nblink  tutorial_transdifferentiation.nblink  tutorial_transdifferentiation.rst  tutorial_transdifferentiation_chromatin_accessibility.nblink  tutorial_transdifferentiation_transcriptome.nblink
docs/source/scripts/: chrombert_generation.rst  chrombert_generation_cistrome.rst  chrombert_generation_cistrome_sc.rst  chrombert_generation_sc.rst  chrombert_get_cistrome_emb.rst  chrombert_get_region_emb.rst  chrombert_get_regulator_emb.rst  chrombert_imputation_cistrome.rst  chrombert_imputation_cistrome_sc.rst  chrombert_make_dataset.rst  chrombert_prepare_env.rst  finetune.rst  ft_general.rst  ft_gep.rst  ft_prompt_enhanced.rst
examples/: readme.md
examples/train/: ft_general.py  ft_gep.py  ft_prompt_based.py  ft_prompt_enhanced.py
examples/tutorials/: turorial_prompt_eqtl.ipynb  tutorial_embedding_extraction.ipynb  tutorial_finetuning_ChromBERT.ipynb  tutorial_finetuning_ChromBERT_from_scratch.ipynb  tutorial_locus_specific_TRN.ipynb  tutorial_locus_specific_TRN_ezh2.ipynb  tutorial_locus_specific_TRN_starr.ipynb  tutorial_prompt_cistrome_generation.ipynb  tutorial_prompt_cistrome_imputation.ipynb  tutorial_prompt_eqtl.ipynb  tutorial_transdifferentiation.ipynb  tutorial_transdifferentiation_chromatin_accessibility.ipynb  tutorial_transdifferentiation_transcriptome.ipynb
