[build-system]
requires = ["setuptools >=61", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "chrombert"
version = "0.1.0"
description = "ChromBERT: a BERT model for chromatin accessibility prediction"
authors = [
    {name = "dxyang", email= "dxyang@tongji.edu.cn"}
    ]
readme = "README.md"
# license = "MIT"

requires-python = ">=3.8"
dependencies = [
    "jupyter",
    "pyfaidx",
    "ninja",
    "packaging",
    "torch",
    "numpy",
    "pandas",
    "h5py",
    "lightning",
    "transformers",
    "triton",
    "huggingface_hub[cli]",
]

[project.optional-dependencies]
full = [
    "pyarrow",
    "torchvision",
    "tensorboard",
    "scikit-learn",
]


[project.scripts]
chrombert_make_dataset = "chrombert.scripts.chrombert_make_dataset:main"
chrombert_get_region_emb = "chrombert.scripts.chrombert_get_region_emb:main"
chrombert_get_cistrome_emb = "chrombert.scripts.chrombert_get_cistrome_emb:main"
chrombert_get_regulator_emb = "chrombert.scripts.chrombert_get_regulator_emb:main"
chrombert_prepare_env = "chrombert.scripts.chrombert_prepare_env:main"

[tool.setuptools]
packages = ["chrombert"]

