[build-system]
requires = ["setuptools >=61", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "chrombert"
version = "1.0.0"
description = "ChromBERT: a BERT model for chromatin accessibility prediction"
authors = [
    {name = "dxyang", email= "dxyang@tongji.edu.cn"}
    ]
readme = "README.md"
# license = "MIT"

requires-python = ">=3.8"
dependencies = [
    "jupyter",
    "pyfaidx",
    "ninja",
    "packaging",
    "torch",
    "numpy",
    "pandas",
    "matplotlib",
    "torchinfo",
    "h5py",
    "lightning",
    "transformers",
    "triton",
    "huggingface_hub[cli]",
    "pyarrow",
    "torchvision",
    "tensorboard",
    "scikit-learn",
]


[project.scripts]
chrombert_make_dataset = "chrombert.scripts.chrombert_make_dataset:main"
chrombert_get_region_emb = "chrombert.scripts.chrombert_get_region_emb:main"
chrombert_get_cistrome_emb = "chrombert.scripts.chrombert_get_cistrome_emb:main"
chrombert_get_regulator_emb = "chrombert.scripts.chrombert_get_regulator_emb:main"
chrombert_prepare_env = "chrombert.scripts.chrombert_prepare_env:main"

[tool.setuptools]
include-package-data = true 

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["chrombert*"]  # package names should match these glob patterns (["*"] by default)


[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.rst"]

[tool.setuptools.dynamic]
version = {attr = "chrombert.VERSION"}
readme = {file = ["README.md"]}
