[build-system]
requires = ["setuptools >=61", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "chrombert"
version = "1.1.1"
description = "ChromBERT: A pre-trained foundation model for context-specific transcription regulatory network"
authors = [
    {name = "Zhaowei Yu", email = "zhaoweiyu@tongji.edu.cn"},
    {name = "Dongxu Yang", email= "dx_yang@tongji.edu.cn"},
    {name = "Qianqian Chen", email= "2211083@tongji.edu.cn"},
    {name = "Yuxuan Zhang", email= "2211289@tongji.edu.cn"}
    ]
readme = "README.md"
# license = "MIT"

requires-python = ">=3.8"
dependencies = [
    "jupyter",
    "pyfaidx",
    "ninja",
    "packaging",
    "torch",
    "numpy",
    "pandas",
    "matplotlib",
    "torchinfo",
    "h5py",
    "lightning >= 2.0.0",
    "transformers == 4.28.1",
    "huggingface_hub[cli]",
    "pyarrow",
    "torchvision",
    "tensorboard",
    "scikit-learn",
    "pyBigWig"
]


[project.scripts]
chrombert_make_dataset = "chrombert.scripts.chrombert_make_dataset:main"
chrombert_get_region_emb = "chrombert.scripts.chrombert_get_region_emb:main"
chrombert_get_cistrome_emb = "chrombert.scripts.chrombert_get_cistrome_emb:main"
chrombert_get_regulator_emb = "chrombert.scripts.chrombert_get_regulator_emb:main"
chrombert_prepare_env = "chrombert.scripts.chrombert_prepare_env:main"
chrombert_imputation_cistrome = "chrombert.scripts.chrombert_imputation:main"
chrombert_imputation_cistrome_sc = "chrombert.scripts.chrombert_imputation_sc:main"

[tool.setuptools]
include-package-data = true 

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["chrombert*"]  # package names should match these glob patterns (["*"] by default)


[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.rst"]

[tool.setuptools.dynamic]
version = {attr = "chrombert.VERSION"}
readme = {file = ["README.md"]}
